# hpc2022

./: .gitignore  CMakeLists.txt  Dataset.h  Matrix.h  README.md  cols_rows  create_shell_script.cpp  creator  ds_preprocessing.py  dummy_shell_script  hyperparameters.json  main.cpp  pre_process.h  read_dataset.h  submit.sh  submit_64_processes.sh  svm.cpp  svm.h  svm.hpp  svm_utils.h  tune_svm.h  utils.h
benchmarking/: .gitignore  CMakeLists.txt  data.tsv  main  main.c  plot_data.py  scratch.c
data/: dummy.csv  iris.csv  iris_test.csv  iris_training.csv  iris_validation.csv
mpi-broadcast/: main
mpi-examples/benchmarking/: main.c  plot_data.py
mpi-examples/mpi-broadcast/: main.c
mpi-examples/mpi-hello/: main.c
mpi-examples/mpi-ring/: main
mpi-hello/: main  test.sh
mpi-pong/: main  main.c
mpi-reduce/: main  main.c  test.sh
mpi-ring/: main.c
